DH: fix scroll on iphone

--- a/wp-content/themes/denholm/scss/base/_helpers.scss
+++ b/wp-content/themes/denholm/scss/base/_helpers.scss
@@ -74,7 +74,7 @@
       position: absolute;
       border-bottom: 7px solid $white;
       left: 0;
-      bottom: 0;
+      bottom: -2px;
       height: 10px;
       width: 60px;
       content: '';
